test/should_not_compile/equality_tyvar.sml
fun foo (x : 'a) = x = x;
foo 123;
